tests/error/const_type_mismatch_bool.vow
// TEST: error-code TypeMismatch
// TEST: build-json x['span']['length'] > 0
module ConstTypeMismatchBool

const BAD: i64 = true;
